--- a/PART/Source/CprBroker/Web/Views/RemovePerson/Index.cshtml
+++ b/PART/Source/CprBroker/Web/Views/RemovePerson/Index.cshtml
@@ -3,7 +3,7 @@
 
 @section Head {
     <script type="text/javascript" src='@Href("~/Scripts/moment.min.js")'></script>
-    <!-- Include Date Range Picker -->
+    <!--Include Date Range Picker -->
     <script type="text/javascript" src='@Href("~/Scripts/daterangepicker.js")'></script>
     <link rel="stylesheet" type="text/css" href='@Href("~/Content/daterangepicker.css")' />
 
@@ -16,11 +16,44 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title></title>
+    <title>Remove Person</title>
 </head>
-<body>
-    <div>
-        <h1>Remove Person</h1>
-    </div>
+<body onload="document.getElementById(" cprNrInputField").focus();">
+    <div class="container">
+        <div class="col-lg-6">
+            <h1>Remove Person</h1>
+            <div class="alert alert-warning">
+                <strong>WARNING!</strong> When removing a person llorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </div>
+            <form name="removePersonForm" class="form" action="#">
+                <div class="form-group">
+                    <label class="sr-only" for="text">CPR nummer:</label>
+                    <input type="text" class="form-control" id="cprNrInputField" placeholder="Type CPR Number here ..." name="cprNrInputField">
+                </div>
+                <button type="submit" id="removePersonButton" class="btn btn-danger">Remove</button>
+            </form>
+        </div>
+        <br />
+        <div class="col-lg-4">
+            <h2 id="server_response"></h2>
+        </div>
+
+        <script>
+            document.getElementById("removePersonButton").onclick = function () {
+                if (window.confirm("Bekræft sletning af: " + cprNrInputField.value)) {
+                    var xhttp = new XMLHttpRequest();
+                    xhttp.onreadystatechange = function () {
+                        if (this.readyState == 4 && this.status == 200) {
+                            response = this.responseText;
+                            document.getElementById("server_response").innerHTML = 
+                        }
+                    };
+                    xhttp.open("GET", "https://api.chucknorris.io/jokes/random", true);
+                    xhttp.send();
+                    return false; // Will prevent reload of DOM.
+                }
+            };
+        </script>
 </body>
 </html>
