--- a/PART/Source/CprBroker/Web/Views/RemovePerson/Index.cshtml
+++ b/PART/Source/CprBroker/Web/Views/RemovePerson/Index.cshtml
@@ -1,37 +1,24 @@
 ﻿@using CprBroker.Web.Controllers;
 @using CprBroker.Data.Applications;
 
-@section Head {
-    <script type="text/javascript" src='@Href("~/Scripts/moment.min.js")'></script>
-    <!--Include Date Range Picker -->
-    <script type="text/javascript" src='@Href("~/Scripts/daterangepicker.js")'></script>
-    <link rel="stylesheet" type="text/css" href='@Href("~/Content/daterangepicker.css")' />
-
-    <script type="text/javascript" src='@Href("~/Scripts/bootstrap-select.js")'></script>
-    <link rel="stylesheet" type="text/css" href='@Href("~/Content/bootstrap-select.css")' />
-}
-
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Remove Person</title>
 </head>
-<body onload="document.getElementById(" cprNrInputField").focus();">
+<body>
     <div class="container">
         <div class="col-lg-6">
             <h1>Remove Person</h1>
             <div class="alert alert-warning">
-                <strong>WARNING!</strong> When removing a person llorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                <strong>WARNING!</strong> This action will remove a given person from the CPR Broker local cache.
             </div>
-            <form name="removePersonForm" class="form" action="#">
-                <div class="form-group">
-                    <label class="sr-only" for="text">CPR nummer:</label>
-                    <input type="text" class="form-control" id="cprNrInputField" placeholder="Type CPR Number here ..." name="cprNrInputField">
-                </div>
-                <button type="submit" id="removePersonButton" class="btn btn-danger">Remove</button>
+            <form id="removePersonForm">
+                <label class="sr-only" for="text">CPR nummer:</label>
+                <input type="text" class="form-control" id="cprNrInputField" placeholder="Type CPR Number here ..." name="cprNrInputField">
+                <br />
+                <input type="submit" value="Remove" id="removePersonButton" class="btn btn-danger">
             </form>
         </div>
         <br />
@@ -40,20 +27,24 @@
         </div>
 
         <script>
-            document.getElementById("removePersonButton").onclick = function () {
-                if (window.confirm("Bekræft sletning af: " + cprNrInputField.value)) {
-                    var xhttp = new XMLHttpRequest();
-                    xhttp.onreadystatechange = function () {
-                        if (this.readyState == 4 && this.status == 200) {
-                            response = this.responseText;
-                            document.getElementById("server_response").innerHTML = 
+            $(document).ready(function () {
+                $("#removePersonForm").on("submit", function (e) {
+                    e.preventDefault();
+                    var formData = new FormData();
+                    formData.append("cprNrInputField", $('#cprNrInputField').val())
+                    $.ajax({
+                        type: "POST",
+                        url: "@Url.Action("../Pages/RemovePerson")",
+                        data: formData,
+                        processData: false,
+                        contentType: false,
+                        success: function (response) {
+                            $("#server_response").html(response);
                         }
-                    };
-                    xhttp.open("GET", "https://api.chucknorris.io/jokes/random", true);
-                    xhttp.send();
-                    return false; // Will prevent reload of DOM.
-                }
-            };
+                    });
+                });
+            });
         </script>
+    </div>
 </body>
 </html>
