minor enhancement of response message

--- a/PART/Source/CprBroker/Web/Views/RemovePerson/Index.cshtml
+++ b/PART/Source/CprBroker/Web/Views/RemovePerson/Index.cshtml
@@ -8,7 +8,7 @@
     <title>Remove Person</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="remove_person_container">
         <div class="col-lg-6">
             <h1>Remove Person</h1>
             <div class="alert alert-warning">
@@ -21,9 +21,8 @@
                 <input type="submit" value="Remove" id="removePersonButton" class="btn btn-danger">
             </form>
         </div>
-        <br />
-        <div class="col-lg-4">
-            <h2 id="server_response"></h2>
+        <div class="col-lg-12">
+            <h3 id="server_response"></h3>
         </div>
 
         <script>
