--- a/PART/Source/CprBroker/Web/Views/RemovePerson/Index.cshtml
+++ b/PART/Source/CprBroker/Web/Views/RemovePerson/Index.cshtml
@@ -21,9 +21,6 @@
                 <input type="submit" value="Remove" id="removePersonButton" class="btn btn-danger">
             </form>
         </div>
-        <div class="col-lg-12">
-            <h3 id="server_response"></h3>
-        </div>
 
         <script>
             $(document).ready(function () {
@@ -38,7 +35,7 @@
                         processData: false,
                         contentType: false,
                         success: function (response) {
-                            $("#server_response").html(response);
+                            alert(response);
                         }
                     });
                 });
